update swagger and refactoring
